<resources>
    <string name="app_name">ChelseaIcon</string>
    <string name="flag">flag</string>
    <string name="about">about</string>
    <string name="name_me">Aditya Johansah</string>
    <string name="email">adityajohansah@gmail.com</string>
    <string name="players_name">Players Name</string>
    <string name="preview">Nationality\nPosition\nMarket Value</string>
    <string name="nationality">Nationality</string>
    <string name="position">Position</string>
    <string name="market_value">Market Value</string>
    <string name="career">Career</string>
    <string name="share">Share</string>
    <string-array name="data_name">
        <item>Cole Palmer</item>
        <item>Pedro Neto</item>
        <item>Nicolas Jackson</item>
        <item>Jadon Sancho</item>
        <item>Mykhaylo Mudryk</item>
        <item>Enzo Fernández</item>
        <item>Levi Colwill</item>
        <item>Wesley Fofana</item>
        <item>Marc Cucurella</item>
        <item>Ben Chilwell</item>
    </string-array>
    <string-array name="data_nationality">
        <item>English</item>
        <item>Portugal</item>
        <item>Senegal</item>
        <item>English</item>
        <item>Ukraine</item>
        <item>Argentina</item>
        <item>English</item>
        <item>France</item>
        <item>Spain</item>
        <item>English</item>
    </string-array>
    <string-array name="data_position">
        <item>AMF/RW/RM</item>
        <item>RW/RM</item>
        <item>ST/CF</item>
        <item>LW/LM</item>
        <item>LW/LM</item>
        <item>CM/DMF</item>
        <item>CB</item>
        <item>CB</item>
        <item>LB/LCB</item>
        <item>LB/LCB</item>
    </string-array>
    <string-array name="data_market_value">
        <item>€90.00M</item>
        <item>€55.00M</item>
        <item>€40.00M</item>
        <item>€30.00M</item>
        <item>€30.00M</item>
        <item>€75.00M</item>
        <item>€50.00M</item>
        <item>€25.00M</item>
        <item>€30.00M</item>
        <item>€22.00M</item>
    </string-array>
</resources>